--- a/panel/src/pages/dashbaord/dashboard.scss
+++ b/panel/src/pages/dashbaord/dashboard.scss
@@ -8,9 +8,21 @@
     .homeCOntainer{
         flex: 4;
         margin: 2rem;
+
+        .home_up{
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 6rem;
+        }
+
+        .dash{
+            font-size: 28px;
+            font-weight: 500;
+            color: #404040;
+        }
         .homeUp{
             display: flex;
-            flex-direction: column;
+            flex-direction: column; 
             h1{
                 font-size: 15px;
                 color: #FB0404;
@@ -18,6 +30,7 @@
                 justify-content: end;
                 margin-right: 3rem;
             }
+
             .search{
                 display: flex;
                 width: 13rem;
@@ -27,7 +40,7 @@
                 align-items: center;
                 border: 1px solid #e7e5e5;
                 border-radius: 5px;
-                padding: 5px 3px 5px 3px;
+                padding: 5px 3px 5px 3px; 
        
                 .searchN{
                     font-size: 15px;
@@ -55,7 +68,7 @@
                 gap: 3rem;
                 .one{
                     height: 130px;
-                    width: 180px;
+                    width: 210px;
                     display: flex;
                     flex-direction: column;
                     justify-content: center;
@@ -69,6 +82,7 @@
                     }
                     h2{
                         font-size: 34px;
+                        font-weight: 700;
                         color: #000000;
                     }
                     .status{
@@ -92,7 +106,7 @@
                 }
                 .three{
                     height: 130px;
-                    width: 180px;
+                    width: 210px;
                     display: flex;
                     flex-direction: column;
                     justify-content: center;
@@ -106,7 +120,14 @@
                     }
                     h2{
                         font-size: 34px;
+                        font-weight: 700;
                         color: #000000;
+                    }
+
+                    .api{
+                        color: #FB0404;
+                        font-size: 34px;
+                        font-weight: 700;
                     }
                     .status{
                         display: flex;
